# vehicle-smoke-detection

./: .gitignore  README.md  app.py  data.yaml  main.py  pyproject.toml
docs/: initial_draft.md
docs/data/: research-papers.md  sources.md
docs/research-papers/: 1_automatic_detection_method_for_black_smoke_vehicles_considering_motion_shadows.md  2_db_net_detecting_vehicle_smoke_with_deep_block_networks.md  8_smoke_vehicle_detection_based_on_multi_feature_fusion_and_hidden_markov_model.md  readme.md
docs/steps/: 01_data_collection.md  02_data_preprocessing.md  03_labeling.md  04_summary.md
model/training_phase_3/: classes.txt  data.yaml  notes.json  server.py  train_test_split.py  train_yolo.py
model/training_phase_3/labels/: 021ff7c3-a700c81c-c3e79a86-9ab7692d-e7f357ac-img2776.txt  0a0e4eaa-7e5fb862-ab464d22-99bb1eee-0167_video_frame_0013.txt  0faa08d9-1821c171-1c55cf90-25e590bb-0034_video_frame_0012.txt  150c5491-01dbea10-5e10f143-ce799270-0034_video_frame_0016.txt  19d9b1d2-ad90220d-4a2a2c03-36de4459-d40cb47d-img3445.txt  1f8034bc-fa4b6170-443113b2-4cf4563c-0167_video_frame_0014.txt  25391144-97986074-224ed80f-fbae958c-0004_video_frame_0005.txt  27dab3a9-42c981a7-77181bc5-3deb7259-0034_video_frame_0009.txt  2f489388-2b36cbbe-b9dacb8c-c6e308ff-0008_video_frame_0030.txt  3470f340-99839695-bf39fb0b-1db8540a-de4cc202-img601.txt  566f809e-10582a8d-529776e6-7274f315-ed8ae97c-img808.txt  59119e5a-b16056d2-9834b138-2368fd14-f1a0230a-img1114.txt  (+18 more)
server/: app.py
training_phase/: extract_frames.py
utils/: detector.py  extract_frames.py  split_raw_videos.py
(+27 files in other folders)
