[project]
name = "vehicle-smoke-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "labelimg>=1.8.6",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "streamlit>=1.45.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.150",
]
